--- a/slurm/analysis_top1000/analysis.nb.html
+++ b/slurm/analysis_top1000/analysis.nb.html
@@ -1151,7 +1151,7 @@ fraction_shrinking_min_old</code></pre>
 <div id="how-old-are-dependencies" class="section level1">
 <h1>How Old Are Dependencies?</h1>
 <p>I ran:</p>
-<p>$ python3 all_oldness.py /scratch/a.guha/minnpm-exp/vanilla &gt; oldness_vanilla.csv $ python3 all_oldness.py /scratch/a.guha/minnpm-exp/rosette/npm/min_oldness,min_num│ _deps &gt; oldness_npm_oldness_deps.csv</p>
+<p>$ python3 all_oldness.py /scratch/minnpm-exp/vanilla &gt; oldness_vanilla.csv $ python3 all_oldness.py /scratch/minnpm-exp/rosette/npm/min_oldness,min_num│ _deps &gt; oldness_npm_oldness_deps.csv</p>
 <p>Raw data</p>
 <!-- rnb-text-end -->
 <!-- rnb-chunk-begin -->
