--- a/slurm/analysis_top1000/analysis.html
+++ b/slurm/analysis_top1000/analysis.html
@@ -1643,7 +1643,7 @@ pre code {
 <pre><code>## ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()</code></pre>
-<pre class="r"><code>knitr::opts_knit$set(root.dir = &quot;/scratch/a.guha/minnpm-exp&quot;)</code></pre>
+<pre class="r"><code>knitr::opts_knit$set(root.dir = &quot;/scratch/minnpm-exp&quot;)</code></pre>
 <p>Load the data:</p>
 <pre class="r"><code>raw_data &lt;- read_csv(&quot;results.csv&quot;,
   col_types = cols(Status=col_factor(),
